--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "add": "^2.0.6",
     "axios": "^0.27.2",
     "dotenv": "^16.0.1",
+    "eslint-plugin-react-hooks": "^4.6.0-next-3133dfa6e-20220526",
     "graphql": "^16.4.0",
     "isomorphic-fetch": "^3.0.0",
     "js-cookie": "^3.0.1",
